第12章粗翻完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
@@ -19,7 +19,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Biphasic sleep](https://supermemo.guru/wiki/Biphasic_sleep) - sleep in two blocks: night and siesta
 - [双相睡眠](https://supermemo.guru/wiki/Biphasic_sleep)——分两个时间段的睡眠：夜间睡眠和午睡
 - [Circadian cycle](https://supermemo.guru/wiki/Circadian_cycle) - ~24h cycle of changes in the state of body and mind
-- [昼夜周期](https://supermemo.guru/wiki/Circadian_cycle)——身心状态变化的24小时周期
+- [昼夜周期](https://supermemo.guru/wiki/Circadian_cycle)——身心状态变化的 24 小时周期
 - [Circadian phase](https://supermemo.guru/wiki/Circadian_phase) - the time of day measured in hours since natural waking
 - [昼夜相位](https://supermemo.guru/wiki/Circadian_phase)——一天中自然醒来后，以小时为单位测量的时间
 - [Circadian sleep propensity](https://supermemo.guru/wiki/Circadian_sleep_propensity) - sleepiness determined by the body clock
@@ -87,7 +87,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Minimum information principle](https://supermemo.guru/wiki/Minimum_information_principle) - claim that simple memories are easy to retain for longer
 - [最小信息原理](https://supermemo.guru/wiki/Minimum_information_principle)——简单的记忆容易保留更长时间的声明
 - [Natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) - undisturbed sleep-wake cycle that maximizes creativity
-- [自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)——不受干扰的最大限度地发挥创造力的睡眠-醒来周期
+- [自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)——不受干扰的最大限度地发挥创造力的睡眠-醒来周期
 - [Passive review](https://supermemo.guru/wiki/Passive_review) - undemanding processing of knowledge (e.g. reading as opposed to [active recall](https://supermemo.guru/wiki/Active_recall))
 - [被动复习](https://supermemo.guru/wiki/Passive_review)——对知识的简单加工（例如阅读而不是[主动回忆](https://supermemo.guru/wiki/Active_recall)）
 - [Pattern completion](https://supermemo.guru/wiki/Pattern_completion) - ability of a neural network to recognize incomplete input (e.g. a blurry picture)
@@ -107,7 +107,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Redundancy](https://supermemo.guru/wiki/Redundancy) - extra load of knowledge that may add to its quality
 - [冗余](https://supermemo.guru/wiki/Redundancy)——可能会增加知识质量的额外知识负载
 - [Regress zone](https://supermemo.guru/wiki/Regress_zone) - range of external pressure that undermines learning outcomes
-- [倒退区](https://supermemo.guru/wiki/Regress_zone)——逐渐削弱学习效果的外部压力范围
+- [回归区](https://supermemo.guru/wiki/Regress_zone)——逐渐削弱学习效果的外部压力范围
 - [Retrievability](https://supermemo.guru/wiki/Retrievability) - probability of recall of a given memory
 - [可提取性](https://supermemo.guru/wiki/Retrievability)——对特定记忆的回忆概率
 - [Self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) - self-learning in which materials and goals are determined by the student
