--- a/I would never send my kids to school我再也不会把孩子送去学校/20.Why kids hate school为什么孩子们讨厌学校.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/20.Why kids hate school为什么孩子们讨厌学校.md
@@ -1,24 +1,44 @@
 # 20 Why kids hate school?
 
+# 为什么孩子们讨厌学校？
+
 ## 20.1 Experts confirm: kids don't like school
+
+## 专家证实：孩子们不喜欢学校
 
 It was back in 1964 when rebellious educator [John Holt](https://supermemo.guru/wiki/John_Holt), in his book "*How Children Fail*", noticed that the school system is a major contributor to academic failure. Since then, relatively little has changed. [Homeschooling](https://supermemo.guru/wiki/Homeschooling) is now more popular in the US. Parental rights in reference to schooling have improved in many legislations. However, there are also major setbacks. Most of them are a side effect of the accelerated drive for "better" education across the world. The industrial manufacture of educated masses has grown in scale.
 
+早在1964年，叛逆的教育家约翰霍尔特在他的“儿童如何失败”一书中注意到，学校系统是学业失败的主要原因。 从那以后，相对来说变化不大。 家庭学校现在在美国更受欢迎。 许多立法都提到了关于学校教育的父母权利。 然而，也有重大挫折。 其中大多数都是加速推动全球“更好”教育的副作用。 受过教育的群众的工业制造规模不断扩大。
+
 Psychologist [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willingham) wrote a book "*Why Don't Students Like School*". In the book, he criticized teaching methods, which do not account for cognitive needs and abilities of children. Another notable psychologist [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) was [quite upset](https://supermemo.guru/wiki/Gray_about_Willingham) with the fact that the book did not get to the core of the problem. According to Dr Gray, kids hate school for it limits child freedoms. Gray does not hesitate to say "*school is prison*".
+
+心理学家Daniel Willingham写了一本书“为什么学生不喜欢学校”。 在书中，他批评了教学方法，这些方法没有考虑儿童的认知需求和能力。 另一位着名的心理学家彼得格雷对这本书没有解决问题的核心这一事实感到非常沮丧。 根据格雷博士的说法，孩子们讨厌学校因为它限制了孩子的自由。 格雷毫不犹豫地说“学校就是监狱”。
 
 ## 20.2 My own investigation
 
 Obviously, both Willingham and [Gray](https://supermemo.guru/wiki/Peter_Gray) are right. However, I decided to do a bit of research of my own. I decided to list all the most prominent school pains. Interviewing kids seemed like the best way to go. Before writing this article, in summer 2016, **I talked to some two hundred kids of all ages** (and many more since). This painted for me a pretty solid picture. Kids dislike or hate school almost universally. The older they are, the stronger the feeling.
 
+显然，Willingham和Gray都是对的。 但是，我决定对自己做一些研究。 我决定列出所有最突出的学校痛苦。 面试孩子似乎是最好的方式。 在写这篇文章之前，在2016年夏天，我与大约200名各个年龄段的孩子进行了交谈（之后还有更多）。 这给我画了一幅非常扎实的画面。 孩子们几乎普遍不喜欢或讨厌上学。 他们越老，感觉就越强烈。
+
 My impression does not agree entirely with what researchers report. Depending on methodology and the country, the findings claim that "only" 20-80% kids dislike school.
+
+我的印象并不完全同意研究人员的报道。 根据方法和国家，调查结果声称“只有”20-80％的孩子不喜欢上学。
 
 In the process of collecting opinions, I also spoke to adults. Amazingly, the entirely different picture emerges there. Most parents claim "*my kid loves kindergarten*" or "*my kids love school*". Wherefrom this dissonance? This is complex and goes beyond the scope of [this book](https://supermemo.guru/wiki/Problem_of_schooling). The dissonance comes from a combination of poor communication, sense of guilt, [distorted memories of schooling](https://supermemo.guru/wiki/Glorification_of_schooling), as well as maturity, where only after years we appreciate the value of the time spent at school heavily whitewashed with the brightness of youth. Most of all, [child's brain](https://supermemo.guru/wiki/Childhood_amnesia) has no good system to send messages to the future self, the adult brain: *"I am different. I work differently. Can't you understand?"*. This is why **adults will never understand kid brains via empathy alone**. They can only rationalize and attempt to empathize via the findings of [neuroscience](https://supermemo.guru/wiki/Pleasure_of_learning).
 
+在收集意见的过程中，我还与成年人交谈。令人惊讶的是，完全不同的画面出现在那里。大多数父母声称“我的孩子喜欢幼儿园”或“我的孩子喜欢上学”。从哪个不和谐？这很复杂，超出了本书的范围。这种不和谐来自于沟通不畅，内疚感，对学校教育的扭曲记忆以及成熟的结合，只有在经过多年的努力之后，我们才会欣赏在学校度过的时光的价值，这些时间与年轻人的光辉相得益彰。最重要的是，孩子的大脑没有良好的系统来向未来的自我发送信息，成人大脑：“我与众不同。我的工作方式不同。你不明白吗？”。这就是为什么成年人不会仅仅通过移情来理解孩子的大脑。他们只能通过神经科学的发现合理化并尝试同情。
+
 As for [distorted memories](https://supermemo.guru/wiki/How_are_false_memories_born%3F), this is my field of expertise. Therefore I made an honest evaluation of my own feelings about my own experience at schools. The verdict is simple: school memories are a constellation of love and hate and all shades in between. Anyone who says "*I loved school*" or "*I hated school*" must be making a gross generalization that is largely justified by the distortive and generalizing power of the human brain. This is why live interviews with kids about their feeling "*at the moment*" are so precious. Interview honesty is vital. This is why I picked kids mostly from a circle of friends. Those who I approached as a stranger were hesitant or literally afraid to admit they dislike school! As if it was a thing we should not say loud. Kids are pressured and conditioned to say loudly that "*school is good*". Disliking school is supposed to be a reason to be ashamed or condemned. Only when kids find me as their ally, they admit the truth: "*school is prison*".
+
+至于扭曲的记忆，这是我的专业领域。因此，我对自己对学校经历的感受进行了诚实的评价。判决很简单：学校的记忆是一种爱与恨的星座，两者之间都是阴影。任何说“我喜欢上学”或“我讨厌上学”的人都必须做出一种粗略的概括，这种概括在很大程度上是由人类大脑的扭曲和泛化力量所证明的。这就是为什么现场采访孩子关于他们“此刻”的感觉是如此珍贵。面试诚实至关重要。这就是为什么我主要从一群朋友那里挑选孩子的原因。那些我作为一个陌生人接近的人是犹豫不决或者真的害怕承认他们不喜欢上学！好像这是一件我们不应该大声说的话。孩子们受到压力和条件，大声说“学校好”。不喜欢上学应该是感到羞耻或被谴责的理由。只有当孩子们发现我是他们的盟友时，他们才承认真相：“学校就是监狱”。
 
 ## 20.3 Top 11: What kids hate most about school
 
+## 前11名：孩子最讨厌学校的地方
+
 I put primary kid gripes into the following categories prioritized from the worst to the least significant. Every kid has his or her own list. My bullets should be considered an "average". This is what kids hate most about school:
+
+我将小学生的抱怨分为以下几类，从最差到最不重要。每个孩子都有自己的清单。我的子弹应被视为“平均”。这是孩子最讨厌学校的事情：
 
 1. [Getting up in the morning](https://supermemo.guru/wiki/Natural_creativity_cycle)
 2. [Boredom](https://supermemo.guru/wiki/Pleasure_of_learning)
@@ -32,13 +52,34 @@ I put primary kid gripes into the following categories prioritized from the wors
 10. Lack of freedom to [choose](https://supermemo.guru/wiki/Self-directed_learning) (e.g. courses, subject, sport teams, etc.)
 11. [Pointless learning](https://supermemo.guru/wiki/Learn_drive) (teachers often fail to explain why a subject is important)
 
+
+1. 早上起床
+2. 无聊
+3. 压力（成绩，考试，超负荷）
+4. 过剩时间（疲倦，整天丢失等）
+5. 家庭作业
+6. 恶霸
+7. 自尊问题
+8. 他们不喜欢的人（强迫社会团体，卑鄙的教师，运动员，受欢迎的女孩，教师的宠物等）
+9. 规章制度（没有手机，没有卫生间，着装要求，静音按钮，举手禁止，不能打开窗户等）
+10. 缺乏选择的自由（例如课程，科目，运动队等）
+11. 毫无意义的学习（教师经常无法解释为什么一个学科很重要）
+
 In the duel of the psychologists, Gray vs. Willingham, the list confirms they are both right. However, Gray's view is universal. While Willingham limits his considerations to the cognitive core, assuming tacitly school is unavoidable, Gray strikes the nail on the head. Kids hate schools for the sense of imprisonment. Little wonder then that Gray is upset with Willingham's book which speak of hating schools without touching the issue of freedom.
+
+在心理学家Gray和Willingham的决斗中，这份名单证实他们都是对的。然而，格雷的观点是普遍的。虽然威灵厄姆将他的注意力限制在认知核心，但假设默认学校是不可避免的，格雷在头上打了一针。孩子们讨厌学校的监禁感。难怪Grey对Willingham的书感到不安，该书谈到了讨厌学校而没有触及自由问题。
 
 Cognition science could remedy the hate of schooling to a degree and with serious difficulties.
 
+认知科学可以在一定程度上解决学校教育的仇恨，并有严重的困难。
+
 Early waking can be tackled with [chronotherapy](https://supermemo.guru/wiki/Chronotherapy). [Homework](https://supermemo.guru/wiki/Homework), boredom, and [stress](https://supermemo.guru/wiki/Stress_resilience) can be solved by using the right cognitive approach (esp. [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning)). Long hours and regulations are a matter of good administration. As for bad people in the system, this is a pretty universal phenomenon. All social groups suffer from frictions. However, there are inherent [design flaws](https://supermemo.guru/wiki/Education_counteracts_evolution)in the current educational system model. Only [homeschooling](https://supermemo.guru/wiki/Homeschooling), [democratic schooling](https://supermemo.guru/wiki/Democratic_school), or [unschooling](https://supermemo.guru/wiki/Unschooling) make it possible to fully resolve all issues above, incl. the [problem of socialization](https://supermemo.guru/wiki/Optimal_socialization).
 
+早期醒来可以通过时间疗法来解决。家庭作业，厌倦和压力可以通过使用正确的认知方法（尤其是自我导向学习）来解决。长时间和规则是一个良好的管理问题。至于系统中的坏人，这是一个非常普遍的现象。所有社会群体都遭受摩擦。然而，当前的教育系统模型存在固有的设计缺陷。只有家庭教育，民主学校教育或非学校教育才能完全解决上述所有问题，包括。社会化问题。
+
 See also: [I wish I had dropped out](https://supermemo.guru/wiki/I_wish_I_had_dropped_out)
+
+另见：我希望我退学了
 
 ![img](https://supermemo.guru/images/thumb/f/ff/School_makes_me_feel_sad.jpg/500px-School_makes_me_feel_sad.jpg)
 
@@ -46,60 +87,98 @@ See also: [I wish I had dropped out](https://supermemo.guru/wiki/I_wish_I_had_dr
 
 School makes me wanna die
 
+```
+学校让我想死
+```
+
 > **Figure:** An article at [Free Thought Project](http://thefreethoughtproject.com/google-results-school-makes-search-reveal-disturbing-problem-public-education/) revealed a Google autocomplete propositions for "*school makes me*" (originally posted at [Homeschooling / Unschooling Facebook page](https://www.facebook.com/homeschoolingunschooling/photos/a.221837727864433.46751.181154285266111/1600940536620805/?type=3&theater)). I know that kids hate school, but the list in the search box was still striking. The school makes kids feel, I quote literally: *depressed, suicidal, anxious, stupid, sick, tired, sad, and stressed*. The negative vibe of that list defies belief, so I repeated the search myself and found only minor differences: *wanna die, wanna cry, wanna cut, and wanna give up*. There wasn't a single positive proposition like *school makes me learn with pleasure*, *school makes me smart/educated*, or *school helps me meet nice people*, or so. In case you think that people google only for solutions to problems, you will notice that the same experiment for *jogging* or *exercise* will likely produce suggestions such as *jogging makes me happy* or *exercise raises my endorphins*
+>
+> 图：Free Thought Project上的一篇文章揭示了“学校让我”的谷歌自动完成主张（最初发布在家庭教育/非学校Facebook页面）。我知道孩子们讨厌上学，但搜索框中的名单仍然引人注目。学校让孩子们感受到，我引用字面意思：抑郁，自杀，焦虑，愚蠢，生病，疲倦，悲伤和压力。该列表的负面氛围违背了信念，所以我自己重复搜索，发现只有微小的差异：想要死，想哭，想要切，想要放弃。没有一个积极的主张像学校让我愉快地学习，学校让我聪明/受过教育，或学校帮助我认识好人，等等。如果您认为人们谷歌只是为了解决问题，你会发现慢跑或运动相同的实验可能会产生一些建议，如慢跑让我开心或运动加重我的内啡肽
 
 ## 20.4 Why kids like school?
 
+## 为什么孩子喜欢上学？
+
 For balance, let's consider why kids like school. Nearly all teens hate school, but some would say they like school conditionally.
+
+为了平衡，让我们考虑为什么孩子喜欢上学。几乎所有的青少年都讨厌上学，但有些人会说他们有条理地喜欢上学。
 
 For example "*I hate school, but I love to meet my friends there*". Or, "*I hate school, but I love physical education*". Or "*I love German, but I hate English*".
 
+例如“我讨厌上学，但我喜欢在那里认识我的朋友”。或者，“我讨厌上学，但我喜欢体育”。或者“我爱德语，但我讨厌英语”。
+
 ### 20.4.1 Freddy
+
+### Freddy
 
 I found just one case of a kid with a genuine liking for school. Freddy is 11 years old. He comes from a very well regulated family. There is no TV at home. Freddy and his siblings all started reading early. There was no distraction from YouTube or [videogames](https://supermemo.guru/wiki/Videogames). There were regular bedtime stories with his mom and dad.
 
+我发现只有一个孩子真正喜欢上学。弗雷迪今年11岁。他来自一个受到良好监管的家庭。家里没有电视。弗雷迪和他的兄弟姐妹都早早开始读书。 YouTube或电子游戏没有分散注意力。他妈妈和爸爸经常上床睡觉。
+
 Freddy goes to sleep at 20:00. It is his mom who keeps a rigorous lights out regimen. Freddy wakes up naturally, usually around 6 am. This is pretty unique and this might be his first step towards success. His sisters call him a crammer, but they never see him doing homework. He claims to spend 30 min. per day on homework and brings most of knowledge from school. Sometimes he does his homework already at school during breaks. In his fourth year of English, he does not speak English much, but still stands out among kids of his age in his good comprehension. Freddy is one of the best students at school. He is also a great footballer and an incredible unflagging long-distance runner. In short, his formula for liking school seems to look like this: (1) sleep well, (2) come to school refreshed, (3) soak in knowledge, and (4) keep winning. Everyone likes to win. Unfortunately, in his class of 23 (incl. 13 girls), the leader is only one.
+
+弗雷迪在20:00睡觉。是他的妈妈保持严格的熄灯方案。弗雷迪自然醒来，通常在早上6点左右。这是非常独特的，这可能是他迈向成功的第一步。他的姐妹称他为傻瓜，但他们从未见过他做作业。他声称要花30分钟。每天做作业，带来学校的大部分知识。有时他在休息期间已经在学校完成了他的家庭作业。在他英语的第四年，他不会说英语，但在他很好的理解中仍然在他这个年龄的孩子中脱颖而出。弗雷迪是学校里最好的学生之一。他也是一名伟大的足球运动员和一位令人难以置信的不懈的长跑运动员。简而言之，他喜欢上学的公式看起来像这样：（1）睡得好，（2）上学，（3）浸泡知识，（4）继续获胜。每个人都喜欢赢。不幸的是，在他的23级（包括13名女孩）中，领导者只有一名。
 
 In the chapter on [traps awaiting good students](https://supermemo.guru/wiki/Dangers_of_being_a_Straight_A_student), I explain that liking for school or good grades are not always good. In the case of Freddy, I see some not-so-positive signs too:
 
+在关于等待优秀学生的陷阱的章节中，我解释说，喜欢上学或成绩并不总是好的。就弗雷迪而言，我也看到了一些不那么积极的迹象：
+
 - when I asked him about his passions, he had to be prompted by his dad to "remember"
+- 当我向他询问他的激情时，他的父亲必须提醒他“记住”
 - his English does not reflect his good grades
+- 他的英语不能反映他的好成绩
 - when I asked him what he plans to learn during summer vacation, he said *No plans. However, I will learn a lot during my summer camp*
+- 当我问他暑假期间他打算学什么时，他说没有计划。但是，在夏令营期间，我会学到很多东西
 - he confirmed that liking school does not necessarily mean liking to learn
+- 他确认喜欢上学并不一定意味着喜欢学习
 - he hates losing. His competitive nature helps him at school
+- 他讨厌失败。他的竞争性能帮助他在学校
 - he hates comparisons with other kids (other than winning competitions). During one of my "interrogations", he lost patience with me. I was too inquisitive
+- 他讨厌与其他孩子比较（除了赢得比赛）。在我的一次“审讯”中，他对我失去了耐心。我太好奇了
 
 ### 20.4.2 Arian
 
+### Arian
+
 Arian is 16 years old. I have known her since she was in diapers. When she was 11, she was a smiling, happy, precocious, and cocky girl. I spoke to Arian about homeschooling. She insisted she would not like to be homeschooled because school is "*so marvellous*". She literally tried to argue with an old memory expert: "*You are wrong! I learn a lot from school*". However, things took a dramatic turn when Arian graduated from her 6-year primary school and moved to a middle school. There she encountered the problem of [bullying](https://supermemo.guru/wiki/Bullying). Amazingly, part of that bullying came from good students who wanted to play better "game of school" (the concept first criticized by Holt). Bullying sparked truancy, problems with grades, and the escalation of bullying spiral. Bad grades, in turn, caused frictions at home. At the age of 14, on Oct 17, 2013, Arian ran from home! For full four days, her parents and five siblings lived in horror. Police suspected kidnapping. The equivalent of orange alert was raised and countrywide search was undertaken. In the meantime, I tried to be helpful and talk to her friends about possible problems at school. I came back to her parents with "good news": someone mentioned that she was fed up with school and the atmosphere at home and that she would be a likely runaway. She also cut her hair short on the day of disappearance. In parallel, that hypothesis was confirmed by police by tracking her phone activity, and locating her friend Nina who confirmed Arian was alive and well. She was also seen boarding a train. Within 24 hours, on Oct 21, 2013, Arian was detained in a remote city of Torun and returned home with apologies. Her father attributed 80% of the blame to the school (incl. inattentive or passive teachers). Arian put that number lower. Her mom enrolled her in a different school. Two years later, she was doing well at home, and ok at school. She participated in beta-testing of one of the SuperMemos showcasing her smarts and potential. However, she also joined her teen crowd in the hate of schooling. She had nothing good to say about her new school experience. I urged her to try for college, however, in 2016, she was sent to a reform school in Warsaw. Her future is unclear. She praises her reform school for the rigor and discipline that helps her organize her life, however, when I mentioned [democratic schools](https://supermemo.guru/wiki/Democratic_school), she instantly changed her mind: *I would love this kind of freedom!*.
+
+Arian年龄16岁。因为她在尿布上，我认识她。当她11岁时，她是一个微笑，快乐，早熟，自大的女孩。我和Arian谈到了家庭教育。她坚持说她不想在家上学，因为学校“太棒了”。她真的试图与一位老记忆专家争辩：“你错了！我从学校学到了很多东西”。然而，当Arian从她的6年小学毕业并搬到一所中学时，事情发生了翻天覆地的变化。在那里，她遇到了欺凌的问题。令人惊讶的是，这种欺凌行为的一部分来自于想要发挥更好的“学校游戏”的好学生（这个概念首先受到霍尔特的批评）。欺凌引发了逃学现象，成绩问题以及欺凌螺旋升级。反过来，糟糕的成绩会导致家里的摩擦。在2013年10月17日14岁时，阿里安逃离了家！整整四天，她的父母和五个兄弟姐妹生活在恐怖之中。警方涉嫌绑架。提出相当于橙色警报并进行全国范围的搜索。与此同时，我试图提供帮助，并与她的朋友讨论学校可能出现的问题。我带着“好消息”回到她的父母那里：有人提到她厌倦了学校和家里的气氛，她很可能会失控。在失踪之日，她也剪短了头发。与此同时，警方通过追踪她的电话活动证实了这一假设，并找到了她的朋友Nina，他确认Arian活得很好。她还看到登上火车。在2013年10月21日的24小时内，阿里安被拘留在一个偏远的托伦市，并道歉地回家。她的父亲将80％的责任归咎于学校（包括疏忽或被动的教师）。阿里安把这个数字降低了。她的妈妈让她进入了另一所学校。两年后，她在家里做得很好，在学校也很好。她参与了其中一个SuperMemos的beta测试，展示了她的智慧和潜力。然而，她也加入了她的青少年人群，讨厌上学。她对她的新学校经历没什么好说的。我敦促她尝试上大学，然而，在2016年，她被送到华沙的一所改革学校。她的未来不明朗。她赞扬她的改革学校的严谨和纪律，帮助她组织生活，然而，当我提到民主学校时，她立刻改变了主意：我会喜欢这种自由！
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
+个人轶事。为什么要使用轶事？
+
 My own feelings about school
+
+我对学校的感受
 
 My feelings about school evolved from enthusiasm (first grade), to lack of interest, to dislike (high school), to high appreciation (last year of college), to harsh criticism (today).
 
+我对学校的感受从热情（一年级），到缺乏兴趣，到不喜欢（高中），到高度欣赏（去年大学），到严厉的批评（今天）。
+
 I suffer from a sort of "documentation OCD". From early childhood, I obsessively documented all experiences of my young life. In high school, I started writing diaries with precise notes, dates, facts and figures. I also embarked onto a comprehensive project: "*retrospective diary*" where I tried to document all my memories dating back to the first impressions of daycare. This exercise helped me understand how unreliable human memory is when it comes to picturing one's own childhood. All in all, my top of the head answer about my childhood feelings about schools would be "*I hated school*". However, this would be just a convenient recall in the context of this article. In a different context, I might say "*I liked schools*" or "*I loved learning*". When I dig into details, I can bring back hundreds of moments ranging from fear to elation or euphoria. For this project, I pulled out lots of dusty details from my past using my precise record of notes. However, when it comes to figuring out why kids hate school, I decided to rely on face-to-face interviews most of all.
 
-I keep few live emotions associated with schooling. Somehow, all the period of schooling seems largely neutral. However, the dislike of schooling comes back to life when I recall how I cheated my mom by touching a light bulb with a thermometer to convince her I got a fever. I recall that I loved being sick! I could stay at home in bed, read books, paint pictures, drink cocoa, etc. That was nirvana. I was not bothered by rhinitis. I loved rhinitis. I had a few cheating methods with the thermometer. I probably started from rubbing, but this took time and was painful. I advanced to touching the light bulb, but that was blown one day when I failed to shake off the mercury column and my fever went off the scale. I also recalled some severe bouts of sleepiness in class in high school. It was not long before I declared in all seriousness: "
+我遭受了某种“文件OCD”。从幼年时期起，我就痴迷地记录了我年轻时的所有经历。在高中时，我开始用精确的笔记，日期，事实和数字来写日记。我还开始了一个综合项目：“追溯日记”，我试图记录我追溯到日托的第一印象的所有记忆。这个练习帮助我理解了在描绘自己童年时人类记忆的不可靠性。总而言之，我对学校童年情感的回答是“我讨厌学校”。但是，在本文的上下文中，这只是一个方便的回忆。在不同的背景下，我可能会说“我喜欢学校”或“我喜欢学习”。当我深入细节时，我可以带回数百个时刻，从恐惧到兴高采烈或兴奋。对于这个项目，我使用我精确的笔记记录从过去中抽出了许多尘土飞扬的细节。然而，当谈到为什么孩子讨厌上学时，我决定最重要的是依靠面对面的采访。
 
-I will not wake up early for school because a sleepy person is not a good member of society
+I keep few live emotions associated with schooling. Somehow, all the period of schooling seems largely neutral. However, the dislike of schooling comes back to life when I recall how I cheated my mom by touching a light bulb with a thermometer to convince her I got a fever. I recall that I loved being sick! I could stay at home in bed, read books, paint pictures, drink cocoa, etc. That was nirvana. I was not bothered by rhinitis. I loved rhinitis. I had a few cheating methods with the thermometer. I probably started from rubbing, but this took time and was painful. I advanced to touching the light bulb, but that was blown one day when I failed to shake off the mercury column and my fever went off the scale. I also recalled some severe bouts of sleepiness in class in high school. It was not long before I declared in all seriousness: "*I will not wake up early for school because a sleepy person is not a good member of society*". That might have been an onset of teen [DSPS](https://supermemo.guru/wiki/DSPS)that set me on the life-long boycott of alarm clocks and getting up early. I would rather miss the class and suffer the consequences
 
-". That might have been an onset of teen
+我几乎没有与学校教育相关的生活情感。不知何故，所有的学校教育时期似乎都很中立。然而，当我回想起我是如何通过用温度计触摸一个灯泡来欺骗我的妈妈以说服她发烧时，对学校教育的厌恶又恢复了生机。我记得我喜欢生病！我可以待在家里躺在床上，看书，画画，喝可可等等。这是必杀技。我没有被鼻炎困扰。我喜欢鼻炎。我用温度计做了一些作弊方法。我可能从摩擦开始，但这需要时间并且很痛苦。我提前触摸了灯泡，但有一天，当我没有摆脱水银柱而我的发烧超出了规模时，它被吹了。我还回忆起高中阶段一些严重的困倦。不久我才认真地宣布：“我不会提早上学，因为一个沉睡的人不是社会的好成员”。这可能是青少年DSPS的爆发，让我终生抵制闹钟并早起。我宁愿错过课程并承担后果
 
- 
 
-DSPS
-
- 
-
-that set me on the life-long boycott of alarm clocks and getting up early. I would rather miss the class and suffer the consequences
 
 ## 20.5 Summary: Why kids hate school
 
+## 摘要：为什么孩子们讨厌上学
+
 - loss of freedom and excess work are a frequent reason for school hate
+- 失去自由和过度工作是学校讨厌的常见原因
 - lack of motivation and low [learn drive](https://supermemo.guru/wiki/Learn_drive) make school an unpleasant experience for most kids
+- 缺乏动力和低学习驾驶使学校成为大多数孩子不愉快的经历
 - [early school start](https://supermemo.guru/wiki/Optimizing_the_timing_of_brainwork) is one of the main reasons teens dislike school
+- 早期开学是青少年不喜欢上学的主要原因之一
 - [homeschooling](https://supermemo.guru/wiki/Homeschooling), [unschooling](https://supermemo.guru/wiki/Unschooling) and [democratic schooling](https://supermemo.guru/wiki/Democratic_school) resolve nearly all causes of school hate
+- 家庭教育，非学校教育和民主学校教育解决了几乎所有学校仇恨的原因
 - most often mentioned reasons for liking school are: friends, physical education, good grades, and very rarely, actual progress in learning
+- 最常提到喜欢上学的原因有：朋友，体育，成绩好，而且学习的实际进展很少
 - [catching a cold](https://supermemo.guru/wiki/Daycare_infections) was a joyous moment in my young life: I did not have to go to school!
+- 感冒是我年轻时的欢乐时刻：我没有去上学！
