第 14 章机翻完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/14.Baby management婴儿管理.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/14.Baby management婴儿管理.md
@@ -1,46 +1,87 @@
 # 14 Baby management
 
+# 婴儿管理
+
 ## 14.1 Rich learning
+
+## 丰富学习
 
 Pediatricians often call babies perfect learning machines, however, memory in early childhood is actually awful (see: [How baby brain does not work](https://supermemo.guru/wiki/How_baby_brain_does_not_work)).
 
+儿科医生经常称婴儿是完美的学习机器，然而，儿童早期的记忆实际上很糟糕（参见：婴儿大脑如何不起作用）。
+
 In terms of motor skills, a 3 year-old is almost a complete human being. In terms of speech, it is just the beginning. Abstract learning and abstract executive function will start even later.
+
+在运动技能方面，一个3岁的人几乎是一个完整的人。就言论而言，这仅仅是个开始。抽象学习和抽象执行功能将在稍后开始。
 
 It is true that the brain proceeds with explosive development in the first years of life. Development does not necessarily need to equate with learning. Sometimes it is just unsophisticated growth and structure remoulding. However, it is good to always remember development is guided by early experience. That early experience shapes the character, procedural capacity, pattern recognition, skills, and other aspects of brain "personality". Thinking of a child brain as a learning machine is good when it comes to ensuring the exposure to experience. Sometimes we call it stimulation. Stimulation is good as long as we do not forget that overstimulation is also possible. For example, night time is time for sleep, not for stimulation. A brain tired with one type of stimulation will do better with a change in stimulation or just a break from exciting stimuli. There is an optimum exposure to stimulation and there is a very simple strategy for making sure the kid gets just as much stimulation as it needs: let the kid decide herself! All the parent needs to do is to provide necessary freedoms and follow natural cravings.
 
+确实，大脑在生命的最初几年里会爆发性地发展。发展不一定需要等同于学习。有时它只是简单的增长和结构改造。然而，始终记住发展是由早期经验指导的。早期的经历塑造了大脑“人格”的特征，程序能力，模式识别，技能和其他方面。在确保接触经验时，将儿童大脑视为学习机器是很好的。有时我们称之为刺激。只要我们不忘记过度刺激也是可能的，刺激是好的。例如，夜晚是睡眠的时间，而不是刺激的时间。厌倦了一种刺激的大脑会因刺激的变化或刺激刺激的休息而做得更好。有一个最佳的刺激暴露，有一个非常简单的策略，以确保孩子获得所需的刺激：让孩子自己决定！所有父母需要做的是提供必要的自由并遵循自然的渴望。
+
 ## 14.2 Micromanaging baby development
+
+## 微观管理婴儿发育
 
 With all the talk of early stimulation or early education, we seem to have already designed baby life to suit adult needs. Instead of ensuring optimum environment for development, we package babies for easy handling. It all begins in pregnancy. The delivery itself is often initiated with a volley of drugs. If the mom's body refuses to obey orders, it is pumped with more drugs. Some of those attempt to make the procedure comfortable, e.g. painkillers. Others are supposed to make it expedient, e.g. oxytocin. More and more moms and doctors take an easy way out: a C-section. There are many consequences of this chemical, hormonal, and mechanical intervention. Some of these may still be unknown or not fully understood. Some consequences may last a lifetime!
 
+随着所有关于早期刺激或早期教育的讨论，我们似乎已经设计了适合成年人需求的婴儿生活。我们不是为了确保最佳的开发环境，而是为了方便处理婴儿包装。这一切都始于怀孕期。交付本身通常是通过大量药物开始的。如果妈妈的身体拒绝服从命令，就会吸食更多毒品。其中一些试图使手术舒适，例如止痛药。其他人应该使它成为权宜之计，例如催产素。越来越多的妈妈和医生采取简单的方法：剖腹产。这种化学，激素和机械干预有许多后果。其中一些可能仍然未知或未完全理解。一些后果可能持续一生！
+
 Herein begins a life destined for micromanagement and convenient design. Visit a baby shop and it is all jam packed with tools of convenience. Baby shops come handy with endless must-have checklists: feeding bottles, breast pumps, car seats, potty training accessories, electronic nannies, cots, warmers, sterilizers, fancy baby food, bibs, cribs, endless skin care products, humidifiers, etc. These all product treat a baby like the most fragile household item, while a baby actually mostly needs its mom's warmth, touch, and breast. Amazing, those are often denied in the first place with babies shunted to baby wards or placed in separate cots for the night. American Academy of Pediatrics, for safety reasons, recommends against co-sleeping, which has been anointed by [millions of years of mammal evolution](http://super-memory.com/articles/sleep.htm#Child.27s_own_bed). Instead of providing a close attachment, and free movement, we resort to a medieval practise of swaddling that severs the link between the brain and the limb.
+
+在这里开始了一场注定微观管理和便利设计的生活。参观一家婴儿用品店，这里挤满了方便的工具。婴儿用品店配备无尽的必备清单：奶瓶，吸奶器，汽车座椅，便盆训练配件，电子保姆，婴儿床，保温器，消毒器，花式婴儿食品，围兜，婴儿床，无尽的护肤品，加湿器等。这些产品对待婴儿就像最脆弱的家居用品，而婴儿实际上主要需要妈妈的温暖，触感和乳房。令人惊讶的是，这些通常被拒绝，婴儿被分流到婴儿病房或者在晚上分开​​安置在婴儿床内。出于安全原因，美国儿科学会建议禁止共同睡眠，这已经被数百万年的哺乳动物进化所吸引。我们不是提供紧密的附着和自由运动，而是采用中世纪的襁褓练习来切断大脑和肢体之间的联系。
 
 Soon we package babies in **cages on wheels**, affectionately called perambulators. Those contraptions have been invented in the 18th century and we slowly start forgetting how original baby transport should look like. We can only take our inspiration from primitive tribes and other primates that simply carry babies around in their arms. It seems baby carriers are the most natural safe modern replacement. I am not sure if they would get orthopedic approval for their straight-jacket nature, however, I am sure they are the best option for the developing brain at very least. A baby in a carrier can see the world around it. It has untold benefits for its ability to recognize 3D patterns, esp. in combination with head mobility. Instead, in a pram, all a baby can see is a rolling flat skyline with occasional attractions in the shape of a tree branches and street lamps. A new trend of [babywearing](https://en.wikipedia.org/wiki/Babywearing) might be the right way to satisfy the perfect learning machine in terms of baby transport. The only time I am happy about prams is when see those brave grannies linger out for 6 hours in a frosty weather with a sleeping baby. In there, I see sound sleep and those brain cells proliferating right in front of our eyes.
 
+不久，我们将婴儿放在轮子上的笼子里，亲切地称为婴儿车。这些装置是在18世纪发明的，我们慢慢开始忘记原始的婴儿运输应该是什么样子。我们只能从原始部落和其他只携带婴儿的灵长类动物中获取灵感。婴儿背带似乎是最自然安全的现代替代品。我不确定他们是否会因为直夹式性质获得骨科批准，但是，我相信它们至少是发育中大脑的最佳选择。载体中的婴儿可以看到周围的世界。它具有识别3D图案的能力，尤其是它具有无可比拟的优势。结合头部活动性。相反，在一辆婴儿车中，所有婴儿都能看到的是一个滚动的平面天际线，偶尔还有树枝和路灯的形状。婴儿穿着的新趋势可能是在婴儿运输方面满足完美学习机器的正确方法。我唯一一次对婴儿车感到高兴的是，看到那些勇敢的阿妈在寒冷的天气里和睡着的婴儿徘徊了6个小时。在那里，我看到了良好的睡眠，那些脑细胞正在我们眼前扩散。
+
 ## 14.3 Caging toddlers
+
+## 驯服幼儿
 
 At toddlerhood, the list of restrictions and baby-proofing keeps increasing. All imaginable devices are supposed to keep toddlers safe, while supervised exposure to dangerous contexts is the best long-term protection. In the end, while parents are busy with their own lives, **kids are safe, but learn nothing about safety**. There are endless protections from bacteria, viruses, parasites, animals, allergens, plants, and dirt. This cripples the developing immune system and causes life-long health problems that also undermine cognitive development. While daycare is said to be a good proving ground for the immune system, it usually ends up undermining child's long term development (see: [Daycare infections](https://supermemo.guru/wiki/Daycare_infections)). Similar myths related to [learning acceleration](https://supermemo.guru/wiki/Learning_acceleration_via_stress) may have adverse effects on brain growth.
 
+在幼儿时期，限制和婴儿打样列表不断增加。所有可以想象的设备都应该保持幼儿的安全，而监督暴露在危险环境中是最好的长期保护。最后，虽然父母忙于自己的生活，但孩子们是安全的，但对安全一无所知。细菌，病毒，寄生虫，动物，过敏原，植物和污垢都有无穷无尽的保护。这会破坏正在发育的免疫系统，并导致终身健康问题，同时也会破坏认知发展。虽然据说日托是免疫系统的良好试验场，但它通常最终会破坏儿童的长期发育（参见：日托感染）。与学习加速相关的类似神话可能对大脑发育产生不利影响。
+
 The old-and-tried approach to food allergies is to "eliminate". Instead of a safe natural exposure, an increasing proportion of kids is fed on **designer diets that have limited natural nutritional value** and an increasingly dangerous foreign chemical content.
+
+对食物过敏的旧尝试方法是“消除”。越来越多的孩子用自然营养价值有限且外国化学成分越来越危险的设计师饮食喂养，而不是安全的自然暴露。
 
 The list of restrictions in exercise and exposure is endless. We deprive kids of the benefits of barefoot training by an array of heavy boots. We limit finger and palm movements by the shackles of fingerless mittens. We lock kids in high-chairs to make feeding easy. We prevent efficient **thermogenesis** with layers of clothing, hats, quadruple blankets, and bath thermometers. Instead, we engage in on-demand training that fits our convenience.
 
+运动和暴露的限制清单是无穷无尽的。我们通过一系列厚重的靴子剥夺了孩子们赤足训练的好处。我们通过无指手套的束缚限制手指和手掌的动作。我们将孩子们锁在高脚椅上，以方便喂食。我们通过各种衣服，帽子，四层毛毯和浴温计来防止有效的产热。相反，我们参与符合我们便利性的按需培训。
+
 Humans are the only animals with a bladder that require **potty "training"**. It is not that babies are dumber than primitive animals. The training serves the adult world.
+
+人类是唯一需要进行便盆“训练”的膀胱动物。并不是说婴儿比原始动物更笨。培训服务于成人世界。
 
 Baby sleep management is supposed to help babies **sleep when we want them to sleep, not when their brains demand sleep**. This form of training is futile, esp. that it begins even before the [circadian cycle develops](https://supermemo.guru/wiki/Baby_sleep). Sleep management results in arrays of cots in daycare filled with babies forced to sleep at a time when they would rather play or even run.
 
+婴儿睡眠管理应该帮助婴儿在我们想要睡觉时睡觉，而不是在他们的大脑要求睡眠时。这种形式的训练是徒劳的，尤其是它甚至在昼夜节律周期开始之前就开始了。睡眠管理导致日托中的婴儿床阵列充满婴儿被迫在他们宁愿玩或甚至跑步的时候睡觉。
+
 Early weaning helps moms get back to work. All those procedures involve a stress for the baby, and a stress for the mom. It is all unnecessary. It results in [daycare misery](https://supermemo.guru/wiki/Daycare_misery). There is even an idea of the nighttime feeding schedule with cruel awakenings for a healthy baby. Fortunately, I have known no parent who would go that far.
 
+早期断奶有助妈妈恢复工作。所有这些程序都会给宝宝带来压力，给妈妈带来压力。这都是不必要的。这导致日托苦难。甚至有一个关于夜间喂食时间表的想法，一个健康的婴儿残酷的觉醒。幸运的是，我不知道父母谁会走得那么远。
+
 Then there is a perfect conformist metaphor: baby dummy. A tool with a dozen of counterindications for health and child psychology. To me, a pacifier says: "*Shut up! You got your milk already? No titty for you*". I sympathize a bit. Breastfeeding in public is still seen as perversion by many. Peer pressure makes it hard to be a good mom.
+
+然后有一个完美的顺从主义比喻：婴儿假。一种对健康和儿童心理有十几种反症状的工具。对我来说，一个安抚奶嘴说：“闭嘴！你已经得到了你的牛奶吗？没有你的奶奶”。我有点同情。公众母乳喂养仍被许多人视为变态。同伴的压力使她很难成为一个好妈妈。
 
 [![Baby dummy as a shut up metaphor.jpg](https://supermemo.guru/images/2/26/Baby_dummy_as_a_shut_up_metaphor.jpg)](https://supermemo.guru/wiki/File:Baby_dummy_as_a_shut_up_metaphor.jpg)
 
 > **\*Figure:** Baby dummy as a shut up metaphor.*
+> *图：婴儿假人作为闭嘴隐喻。*
 
 ## 14.4 Parental crime #1
 
+## 父母犯罪＃1
+
 Some kids get sent to daycare in their first months of life. This often necessitates the enforcement of the obligatory **wake up time**. This sets a kid on a long-lasting brain-limiting habit of waking up against the demands of the body clock. Some kids [never recover](https://supermemo.guru/wiki/War_of_the_networks) from that waking ritual, which may extend for decades. Their [circadian control system](https://supermemo.guru/wiki/Brain_map) gets permanently damaged leading to lifelong sleep disorders that affect the well-being of the population. For more see: [Science of sleep](https://supermemo.guru/wiki/Science_of_sleep)
 
+有些孩子在生命的最初几个月就被送到日托中心。这通常需要强制执行唤醒时间。这让孩子养成了一种长期的大脑限制习惯，即习惯于满足生物钟的要求。有些孩子永远不会从醒来的仪式中恢复过来，这可能延续数十年。他们的昼夜节律控制系统遭到永久性损害，导致终身睡眠障碍，影响人们的福祉。欲了解更多信息：睡眠科学
+
 ## 14.5 Preschool drills
+
+## 幼儿训练
 
 For preschool, there is a perfect torture device: multi-seat toddler desk where kids are mounted and immobilized inside a single semi-circular desk, with high backseats that ensure face orientation towards the "teacher". This is an perfect anti-[ADHD](https://supermemo.guru/wiki/ADHD) device. Fidgeting, head movement, and own interests are considered a bad thing.
 
@@ -50,23 +91,45 @@ For preschool, there is a perfect torture device: multi-seat toddler desk where 
 
 ## 14.6 Exposure is good
 
+## 暴露是好的
+
 In the end, it is good to look at babies as perfect learning machines. Their development is guided by the exposure to environmental stimuli and we need to be constantly aware not to cut off those natural inputs.
+
+最后，将婴儿视为完美的学习机器是件好事。他们的发展受到环境刺激的影响，我们需要不断地意识到不要切断那些自然投入。
 
 Now back to that perfect learning. Science of memory will tell you it is far from perfect, and we need to take a major correction for that in educational strategies. See: [How baby brain does not work](https://supermemo.guru/wiki/How_baby_brain_does_not_work).
 
+现在回到那个完美的学习。记忆科学将告诉你它远非完美，我们需要在教育策略中对此进行重大修正。请参阅：婴儿大脑如何不起作用。
+
 ## 14.7 Summary: Baby management
 
+## 摘要：婴儿管理
+
 - modern baby "management" results in harmful restrictions in the exposure to healthy natural stimuli
+- 现代婴儿“管理”导致对健康自然刺激的有害限制
 - moderate exposure to pathogens and allergens is vital for the health of the immune system
+- 适度接触病原体和过敏原对免疫系统的健康至关重要
 - early academic teaching may slow down brain development and begin a lifelong hate of learning
+- 早期的学术教学可能会减缓大脑发育，并开始终身厌恶学习
 - keeping kids safe with proofing makes it hard to teach them safety
+- 通过打样保证孩子的安全，这使得教他们很难安全
 - overstimulation can best be prevented by letting kids decide their exposure to stimuli
+- 通过让孩子决定接触刺激来最好地预防过度刺激
 - all forms of medical intervention during pregnancy and birth may have negative impact on health
+- 怀孕和分娩期间的所有形式的医疗干预可能对健康产生负面影响
 - circadian system and sleep patterns develop slowly over the first year of life
+- 昼夜系统和睡眠模式在生命的第一年缓慢发展
 - co-sleeping is a natural way of sleeping and breastfeeding
+- 共同睡眠是一种自然的睡眠和母乳喂养方式
 - waking kids in the morning can have consequences that may last a lifetime
+- 早起的孩子会产生可能持续一生的后果
 - kids should sleep when they are sleepy, not when we think they should sleep
+- 孩子应该在困倦时睡觉，而不是在我们认为他们应该睡觉时睡觉
 - all limits on the freedom of movement, slow down development
+- 对行动自由的所有限制，减缓发展
 - exposure to changes in temperature ensures good thermogenesis that forms one of the most powerful body defenses (e.g. against infections)
+- 暴露于温度变化确保良好的产热，形成最强大的身体防御之一（例如抵抗感染）
 - for brain development, baby wearing is superior to using strollers
+- 对于大脑发育，婴儿穿着优于使用婴儿车
 - baby dummy is a poor substitute of the breast
+- 婴儿假人是乳房的不良替代品
