--- a/I would never send my kids to school我再也不会把孩子送去学校/20.Why kids hate school为什么孩子们讨厌学校.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/20.Why kids hate school为什么孩子们讨厌学校.md
@@ -18,11 +18,11 @@ Psychologist [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willing
 
 Obviously, both Willingham and [Gray](https://supermemo.guru/wiki/Peter_Gray) are right. However, I decided to do a bit of research of my own. I decided to list all the most prominent school pains. Interviewing kids seemed like the best way to go. Before writing this article, in summer 2016, **I talked to some two hundred kids of all ages** (and many more since). This painted for me a pretty solid picture. Kids dislike or hate school almost universally. The older they are, the stronger the feeling.
 
-显然，Willingham和Gray都是对的。 但是，我决定对自己做一些研究。 我决定列出所有最突出的学校痛苦。 面试孩子似乎是最好的方式。 在写这篇文章之前，在2016年夏天，我与大约200名各个年龄段的孩子进行了交谈（之后还有更多）。 这给我画了一幅非常扎实的画面。 孩子们几乎普遍不喜欢或讨厌上学。 他们越老，感觉就越强烈。
+显然，Willingham 和 Gray 都是对的。 但是，我决定对自己做一些研究。 我决定列出所有最突出的学校痛苦。 面试孩子似乎是最好的方式。 在写这篇文章之前，在 2016 年夏天，我与大约 200 名各个年龄段的孩子进行了交谈（之后还有更多）。 这给我画了一幅非常扎实的画面。 孩子们几乎普遍不喜欢或讨厌上学。 他们越老，感觉就越强烈。
 
 My impression does not agree entirely with what researchers report. Depending on methodology and the country, the findings claim that "only" 20-80% kids dislike school.
 
-我的印象并不完全同意研究人员的报道。 根据方法和国家，调查结果声称“只有”20-80％的孩子不喜欢上学。
+我的印象并不完全同意研究人员的报道。 根据方法和国家，调查结果声称「只有」20-80％ 的孩子不喜欢上学。
 
 In the process of collecting opinions, I also spoke to adults. Amazingly, the entirely different picture emerges there. Most parents claim "*my kid loves kindergarten*" or "*my kids love school*". Wherefrom this dissonance? This is complex and goes beyond the scope of [this book](https://supermemo.guru/wiki/Problem_of_schooling). The dissonance comes from a combination of poor communication, sense of guilt, [distorted memories of schooling](https://supermemo.guru/wiki/Glorification_of_schooling), as well as maturity, where only after years we appreciate the value of the time spent at school heavily whitewashed with the brightness of youth. Most of all, [child's brain](https://supermemo.guru/wiki/Childhood_amnesia) has no good system to send messages to the future self, the adult brain: *"I am different. I work differently. Can't you understand?"*. This is why **adults will never understand kid brains via empathy alone**. They can only rationalize and attempt to empathize via the findings of [neuroscience](https://supermemo.guru/wiki/Pleasure_of_learning).
 
@@ -53,7 +53,7 @@ I put primary kid gripes into the following categories prioritized from the wors
 11. [Pointless learning](https://supermemo.guru/wiki/Learn_drive) (teachers often fail to explain why a subject is important)
 
 
-1. 早上起床
+1. 早起
 2. 无聊
 3. 压力（成绩，考试，超负荷）
 4. 过剩时间（疲倦，整天丢失等）
@@ -160,9 +160,9 @@ I suffer from a sort of "documentation OCD". From early childhood, I obsessively
 
 我遭受了某种“文件OCD”。从幼年时期起，我就痴迷地记录了我年轻时的所有经历。在高中时，我开始用精确的笔记，日期，事实和数字来写日记。我还开始了一个综合项目：“追溯日记”，我试图记录我追溯到日托的第一印象的所有记忆。这个练习帮助我理解了在描绘自己童年时人类记忆的不可靠性。总而言之，我对学校童年情感的回答是“我讨厌学校”。但是，在本文的上下文中，这只是一个方便的回忆。在不同的背景下，我可能会说“我喜欢学校”或“我喜欢学习”。当我深入细节时，我可以带回数百个时刻，从恐惧到兴高采烈或兴奋。对于这个项目，我使用我精确的笔记记录从过去中抽出了许多尘土飞扬的细节。然而，当谈到为什么孩子讨厌上学时，我决定最重要的是依靠面对面的采访。
 
-I keep few live emotions associated with schooling. Somehow, all the period of schooling seems largely neutral. However, the dislike of schooling comes back to life when I recall how I cheated my mom by touching a light bulb with a thermometer to convince her I got a fever. I recall that I loved being sick! I could stay at home in bed, read books, paint pictures, drink cocoa, etc. That was nirvana. I was not bothered by rhinitis. I loved rhinitis. I had a few cheating methods with the thermometer. I probably started from rubbing, but this took time and was painful. I advanced to touching the light bulb, but that was blown one day when I failed to shake off the mercury column and my fever went off the scale. I also recalled some severe bouts of sleepiness in class in high school. It was not long before I declared in all seriousness: "*I will not wake up early for school because a sleepy person is not a good member of society*". That might have been an onset of teen [DSPS](https://supermemo.guru/wiki/DSPS)that set me on the life-long boycott of alarm clocks and getting up early. I would rather miss the class and suffer the consequences
+I keep few live emotions associated with schooling. Somehow, all the period of schooling seems largely neutral. However, the dislike of schooling comes back to life when I recall how I cheated my mom by touching a light bulb with a thermometer to convince her I got a fever. I recall that I loved being sick! I could stay at home in bed, read books, paint pictures, drink cocoa, etc. That was nirvana. I was not bothered by rhinitis. I loved rhinitis. I had a few cheating methods with the thermometer. I probably started from rubbing, but this took time and was painful. I advanced to touching the light bulb, but that was blown one day when I failed to shake off the mercury column and my fever went off the scale. I also recalled some severe bouts of sleepiness in class in high school. It was not long before I declared in all seriousness: "*I will not wake up early for school because a sleepy person is not a good member of society*". That might have been an onset of teen [DSPS](https://supermemo.guru/wiki/DSPS) that set me on the life-long boycott of alarm clocks and getting up early. I would rather miss the class and suffer the consequences
 
-我几乎没有与学校教育相关的生活情感。不知何故，所有的学校教育时期似乎都很中立。然而，当我回想起我是如何通过用温度计触摸一个灯泡来欺骗我的妈妈以说服她发烧时，对学校教育的厌恶又恢复了生机。我记得我喜欢生病！我可以待在家里躺在床上，看书，画画，喝可可等等。这是必杀技。我没有被鼻炎困扰。我喜欢鼻炎。我用温度计做了一些作弊方法。我可能从摩擦开始，但这需要时间并且很痛苦。我提前触摸了灯泡，但有一天，当我没有摆脱水银柱而我的发烧超出了规模时，它被吹了。我还回忆起高中阶段一些严重的困倦。不久我才认真地宣布：“我不会提早上学，因为一个沉睡的人不是社会的好成员”。这可能是青少年DSPS的爆发，让我终生抵制闹钟并早起。我宁愿错过课程并承担后果
+我几乎没有与学校教育相关的生活情感。不知何故，所有的学校教育时期似乎都很中立。然而，当我回想起我是如何通过用温度计触摸一个灯泡来欺骗我的妈妈以说服她发烧时，对学校教育的厌恶又恢复了生机。我记得我喜欢生病！我可以待在家里躺在床上，看书，画画，喝可可等等。这是必杀技。我没有被鼻炎困扰。我喜欢鼻炎。我用温度计做了一些作弊方法。我可能从摩擦开始，但这需要时间并且很痛苦。我提前触摸了灯泡，但有一天，当我没有摆脱水银柱而我的发烧超出了规模时，它被吹了。我还回忆起高中阶段一些严重的困倦。不久我才认真地宣布：“我不会早起上学，因为一个困倦的人不是社会的好成员”。这可能是青少年 DSPS 的爆发，让我终生抵制闹钟并早起。我宁愿错过课程并承担后果
 
 
 
@@ -175,7 +175,7 @@ I keep few live emotions associated with schooling. Somehow, all the period of s
 - lack of motivation and low [learn drive](https://supermemo.guru/wiki/Learn_drive) make school an unpleasant experience for most kids
 - 缺乏动力和低学习驾驶使学校成为大多数孩子不愉快的经历
 - [early school start](https://supermemo.guru/wiki/Optimizing_the_timing_of_brainwork) is one of the main reasons teens dislike school
-- 早期开学是青少年不喜欢上学的主要原因之一
+- 早早开始上学是青少年不喜欢上学的主要原因之一
 - [homeschooling](https://supermemo.guru/wiki/Homeschooling), [unschooling](https://supermemo.guru/wiki/Unschooling) and [democratic schooling](https://supermemo.guru/wiki/Democratic_school) resolve nearly all causes of school hate
 - 家庭教育，非学校教育和民主学校教育解决了几乎所有学校仇恨的原因
 - most often mentioned reasons for liking school are: friends, physical education, good grades, and very rarely, actual progress in learning
