--- a/I would never send my kids to school我永远不会送我的孩子去学校/20.Why kids hate school为什么孩子们讨厌学校.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/20.Why kids hate school为什么孩子们讨厌学校.md
@@ -8,17 +8,17 @@
 
 It was back in 1964 when rebellious educator [John Holt](https://supermemo.guru/wiki/John_Holt), in his book "*How Children Fail*", noticed that the school system is a major contributor to academic failure. Since then, relatively little has changed. [Homeschooling](https://supermemo.guru/wiki/Homeschooling) is now more popular in the US. Parental rights in reference to schooling have improved in many legislations. However, there are also major setbacks. Most of them are a side effect of the accelerated drive for "better" education across the world. The industrial manufacture of educated masses has grown in scale.
 
-早在 1964 年，叛逆的教育家约翰霍尔特在他的《*儿童是怎样失败的*》一书中注意到，学校系统是学业失败的主要原因。 从那以后，相对来说变化不大。 家庭学校现在在美国更受欢迎。 许多立法都提到了关于学校教育的父母权利。 然而，也有重大挫折。 其中大多数都是加速推动全球「更好」教育的副作用。 受过教育的群众的工业制造规模不断扩大。
+早在 1964 年，叛逆的教育家 [John Holt](https://supermemo.guru/wiki/John_Holt) 在他的《*儿童是怎样失败的*》一书中注意到，学校系统是学业失败的主要原因。 从那以后，相对来说变化不大。[家庭学校](https://supermemo.guru/wiki/Homeschooling)现在在美国更受欢迎。 许多立法都提到了关于学校教育的父母权利。 然而，也有重大挫折。 其中大多数都是加速推动全球「更好」教育的副作用。 受过教育的群众的工业制造规模不断扩大。
 
 Psychologist [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willingham) wrote a book "*Why Don't Students Like School*". In the book, he criticized teaching methods, which do not account for cognitive needs and abilities of children. Another notable psychologist [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) was [quite upset](https://supermemo.guru/wiki/Gray_about_Willingham) with the fact that the book did not get to the core of the problem. According to Dr Gray, kids hate school for it limits child freedoms. Gray does not hesitate to say "*school is prison*".
 
-心理学家 Daniel Willingham 写了一本书《*为什么学生不喜欢学校*》。 在书中，他批评了教学方法，这些方法没有考虑儿童的认知需求和能力。 另一位着名的心理学家彼得格雷对这本书没有解决问题的核心这一事实感到非常沮丧。 根据格雷博士的说法，孩子们讨厌学校因为它限制了孩子的自由。 格雷毫不犹豫地说「*学校就是监狱*」。
+心理学家 [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willingham) 写了一本书《*为什么学生不喜欢学校*》。 在书中，他批评了教学方法，这些方法没有考虑儿童的认知需求和能力。另一位着名的心理学家 [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) 对这本书没有解决问题的核心这一事实感到非常沮丧。 根据 Gray 博士的说法，孩子们讨厌学校因为它限制了孩子的自由。Gray 毫不犹豫地说「*学校就是监狱*」。
 
 ## 20.2 My own investigation
 
 Obviously, both Willingham and [Gray](https://supermemo.guru/wiki/Peter_Gray) are right. However, I decided to do a bit of research of my own. I decided to list all the most prominent school pains. Interviewing kids seemed like the best way to go. Before writing this article, in summer 2016, **I talked to some two hundred kids of all ages** (and many more since). This painted for me a pretty solid picture. Kids dislike or hate school almost universally. The older they are, the stronger the feeling.
 
-显然，Willingham 和 Gray 都是对的。 但是，我决定对自己做一些研究。 我决定列出所有最突出的学校痛苦。 面试孩子似乎是最好的方式。 在写这篇文章之前，在 2016 年夏天，我与大约 200 名各个年龄段的孩子进行了交谈（之后还有更多）。 这给我画了一幅非常扎实的画面。 孩子们几乎普遍不喜欢或讨厌上学。 他们越老，感觉就越强烈。
+显然，Willingham 和 [Gray](https://supermemo.guru/wiki/Peter_Gray) 都是对的。 但是，我决定对自己做一些研究。 我决定列出所有最突出的学校痛苦。 面试孩子似乎是最好的方式。 在写这篇文章之前，在 2016 年夏天，**我与大约 200 名各个年龄段的孩子进行了交谈**（之后还有更多）。 这给我画了一幅非常扎实的画面。 孩子们几乎普遍不喜欢或讨厌上学。 他们越大，感觉就越强烈。
 
 My impression does not agree entirely with what researchers report. Depending on methodology and the country, the findings claim that "only" 20-80% kids dislike school.
 
@@ -26,19 +26,19 @@ My impression does not agree entirely with what researchers report. Depending on
 
 In the process of collecting opinions, I also spoke to adults. Amazingly, the entirely different picture emerges there. Most parents claim "*my kid loves kindergarten*" or "*my kids love school*". Wherefrom this dissonance? This is complex and goes beyond the scope of [this book](https://supermemo.guru/wiki/Problem_of_schooling). The dissonance comes from a combination of poor communication, sense of guilt, [distorted memories of schooling](https://supermemo.guru/wiki/Glorification_of_schooling), as well as maturity, where only after years we appreciate the value of the time spent at school heavily whitewashed with the brightness of youth. Most of all, [child's brain](https://supermemo.guru/wiki/Childhood_amnesia) has no good system to send messages to the future self, the adult brain: *"I am different. I work differently. Can't you understand?"*. This is why **adults will never understand kid brains via empathy alone**. They can only rationalize and attempt to empathize via the findings of [neuroscience](https://supermemo.guru/wiki/Pleasure_of_learning).
 
-在收集意见的过程中，我还与成年人交谈。令人惊讶的是，完全不同的画面出现在那里。大多数父母声称「*我的孩子喜欢幼儿园*」或「*我的孩子喜欢上学*」。从哪个不和谐？这很复杂，超出了本书的范围。这种不和谐来自于沟通不畅，内疚感，对学校教育的扭曲记忆以及成熟的结合，只有在经过多年的努力之后，我们才会欣赏在学校度过的时光的价值，这些时间与年轻人的光辉相得益彰。最重要的是，孩子的大脑没有良好的系统来向未来的自我发送信息，成人大脑：「*我与众不同。我的工作方式不同。你不明白吗？*」。这就是为什么**仅仅通过同情，成年人不会来理解孩子的大脑**。他们只能通过神经科学的发现合理化并尝试同情。
+在收集意见的过程中，我还与成年人交谈。令人惊讶的是，完全不同的画面出现在那里。大多数父母声称「*我的孩子喜欢幼儿园*」或「*我的孩子喜欢上学*」。从哪个不和谐？这很复杂，超出了[本书](https://supermemo.guru/wiki/Problem_of_schooling)的范围。这种不和谐来自于沟通不畅，内疚感，[对学校教育的扭曲记忆](https://supermemo.guru/wiki/Glorification_of_schooling)以及成熟的结合，只有在经过多年的努力之后，我们才会欣赏在学校度过的时光的价值，这些时间与年轻人的光辉相得益彰。最重要的是，[孩子的大脑](https://supermemo.guru/wiki/Childhood_amnesia)没有良好的系统来向未来的自我发送信息，而成人的大脑：「*我与众不同。我的工作方式不同。你不明白吗？*」。这就是为什么**仅仅通过同情，成年人不会来理解孩子的大脑**。他们只能通过[神经科学](https://supermemo.guru/wiki/Pleasure_of_learning)的发现合理化并尝试同情。
 
 As for [distorted memories](https://supermemo.guru/wiki/How_are_false_memories_born%3F), this is my field of expertise. Therefore I made an honest evaluation of my own feelings about my own experience at schools. The verdict is simple: school memories are a constellation of love and hate and all shades in between. Anyone who says "*I loved school*" or "*I hated school*" must be making a gross generalization that is largely justified by the distortive and generalizing power of the human brain. This is why live interviews with kids about their feeling "*at the moment*" are so precious. Interview honesty is vital. This is why I picked kids mostly from a circle of friends. Those who I approached as a stranger were hesitant or literally afraid to admit they dislike school! As if it was a thing we should not say loud. Kids are pressured and conditioned to say loudly that "*school is good*". Disliking school is supposed to be a reason to be ashamed or condemned. Only when kids find me as their ally, they admit the truth: "*school is prison*".
 
-至于扭曲的记忆，这是我的专业领域。因此，我对自己对学校经历的感受进行了诚实的评价。判决很简单：学校的记忆是一种爱与恨的星座，两者之间都是阴影。任何说「我喜欢上学」或「我讨厌上学」的人都必须做出一种粗略的概括，这种概括在很大程度上是由人类大脑的扭曲和泛化力量所证明的。这就是为什么现场采访孩子关于他们「此刻」的感觉是如此珍贵。面试诚实至关重要。这就是为什么我主要从一群朋友那里挑选孩子的原因。那些我作为一个陌生人接近的人是犹豫不决或者真的害怕承认他们不喜欢上学！好像这是一件我们不应该大声说的话。孩子们受到压力和条件，大声说「学校好」。不喜欢上学应该是感到羞耻或被谴责的理由。只有当孩子们发现我是他们的盟友时，他们才承认真相：「学校就是监狱」。
+至于[扭曲的记忆](https://supermemo.guru/wiki/How_are_false_memories_born%3F)，这是我的专业领域。因此，我对自己对学校经历的感受进行了诚实的评价。判决很简单：学校的记忆是一种爱与恨的星座，两者之间都是阴影。任何说「我喜欢上学」或「我讨厌上学」的人都必须做出一种粗略的概括，这种概括在很大程度上是由人类大脑的扭曲和泛化力量所证明的。这就是为什么现场采访孩子关于他们「此刻」的感觉是如此珍贵。面试诚实至关重要。这就是为什么我主要从一群朋友那里挑选孩子的原因。那些我作为一个陌生人接近的人是犹豫不决或者真的害怕承认他们不喜欢上学！好像这是一件我们不应该大声说的话。孩子们受到压力和条件，大声说「*学校好*」。不喜欢上学应该是感到羞耻或被谴责的理由。只有当孩子们发现我是他们的盟友时，他们才承认真相：「*学校就是监狱*」。
 
 ## 20.3 Top 11: What kids hate most about school
 
-## 前 11 名：孩子最讨厌学校的地方
+## Top 11：孩子最讨厌学校的地方
 
 I put primary kid gripes into the following categories prioritized from the worst to the least significant. Every kid has his or her own list. My bullets should be considered an "average". This is what kids hate most about school:
 
-我将小学生的抱怨分为以下几类，从最差到最不重要。每个孩子都有自己的清单。我的子弹应被视为「平均」。这是孩子最讨厌学校的事情：
+我将小学生的抱怨分为以下几类，从最差到最不重要。每个孩子都有自己的清单。我的子弹应被视为「平均」。这是孩子最讨厌学校的地方：
 
 1. [Getting up in the morning](https://supermemo.guru/wiki/Natural_creativity_cycle)
 2. [Boredom](https://supermemo.guru/wiki/Pleasure_of_learning)
@@ -53,21 +53,21 @@ I put primary kid gripes into the following categories prioritized from the wors
 11. [Pointless learning](https://supermemo.guru/wiki/Learn_drive) (teachers often fail to explain why a subject is important)
 
 
-1. 早起
-2. 无聊
-3. 压力（成绩，考试，超负荷）
-4. 过剩时间（疲倦，整天丢失等）
-5. 家庭作业
-6. 恶霸
-7. 自尊问题
-8. 他们不喜欢的人（强迫社会团体，卑鄙的教师，运动员，受欢迎的女孩，教师的宠物等）
+1. [早起](https://supermemo.guru/wiki/Natural_creativity_cycle)
+2. [无聊](https://supermemo.guru/wiki/Pleasure_of_learning)
+3. [压力](https://supermemo.guru/wiki/Stress_resilience)（成绩，考试，超负荷）
+4. [超时](https://supermemo.guru/wiki/Passion_and_memory)（疲倦，整天丢失等）
+5. [家庭作业](https://supermemo.guru/wiki/Homework)
+6. [欺凌](https://supermemo.guru/wiki/Bullying)
+7. [自尊问题](https://supermemo.guru/wiki/Tamara)
+8. [他们不喜欢的人](https://supermemo.guru/wiki/Optimal_socialization)（强制性社会团体，比如卑鄙的教师、运动员、受欢迎的女孩、教师的宠物等）
 9. 规章制度（没有手机，没有卫生间，着装要求，静音按钮，举手禁止，不能打开窗户等）
-10. 缺乏选择的自由（例如课程，科目，运动队等）
-11. 毫无意义的学习（教师经常无法解释为什么一个学科很重要）
+10. 缺乏[选择](https://supermemo.guru/wiki/Self-directed_learning)的自由（例如课程，科目，运动队等）
+11. [毫无意义的学习](https://supermemo.guru/wiki/Learn_drive)（教师经常无法解释为什么一个学科很重要）
 
 In the duel of the psychologists, Gray vs. Willingham, the list confirms they are both right. However, Gray's view is universal. While Willingham limits his considerations to the cognitive core, assuming tacitly school is unavoidable, Gray strikes the nail on the head. Kids hate schools for the sense of imprisonment. Little wonder then that Gray is upset with Willingham's book which speak of hating schools without touching the issue of freedom.
 
-在心理学家 Gray 和 Willingham 的决斗中，这份名单证实他们都是对的。然而，格雷的观点是普遍的。虽然威灵厄姆将他的注意力限制在认知核心，但假设默认学校是不可避免的，格雷在头上打了一针。孩子们讨厌学校的监禁感。难怪 Grey 对 Willingham 的书感到不安，该书谈到了讨厌学校而没有触及自由问题。
+在心理学家 Gray 和 Willingham 的决斗中，这份清单证实他们都是对的。然而，Gray 的观点是普遍的。虽然 Willingham 将他的注意力限制在认知核心，但假设默认学校是不可避免的，Gray 在头上打了一针。孩子们讨厌学校的监禁感。难怪 Grey 对 Willingham 的书感到不安，该书谈到了讨厌学校而没有触及自由问题。
 
 Cognition science could remedy the hate of schooling to a degree and with serious difficulties.
 
@@ -75,7 +75,7 @@ Cognition science could remedy the hate of schooling to a degree and with seriou
 
 Early waking can be tackled with [chronotherapy](https://supermemo.guru/wiki/Chronotherapy). [Homework](https://supermemo.guru/wiki/Homework), boredom, and [stress](https://supermemo.guru/wiki/Stress_resilience) can be solved by using the right cognitive approach (esp. [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning)). Long hours and regulations are a matter of good administration. As for bad people in the system, this is a pretty universal phenomenon. All social groups suffer from frictions. However, there are inherent [design flaws](https://supermemo.guru/wiki/Education_counteracts_evolution)in the current educational system model. Only [homeschooling](https://supermemo.guru/wiki/Homeschooling), [democratic schooling](https://supermemo.guru/wiki/Democratic_school), or [unschooling](https://supermemo.guru/wiki/Unschooling) make it possible to fully resolve all issues above, incl. the [problem of socialization](https://supermemo.guru/wiki/Optimal_socialization).
 
-早期醒来可以通过时间疗法来解决。家庭作业，厌倦和压力可以通过使用正确的认知方法（尤其是自我导向学习）来解决。长时间和规则是一个良好的管理问题。至于系统中的坏人，这是一个非常普遍的现象。所有社会群体都遭受摩擦。然而，当前的教育系统模型存在固有的设计缺陷。只有家庭教育，民主学校教育或非学校教育才能完全解决上述所有问题，包括。社会化问题。
+早起可以通过时间疗法来解决。家庭作业，厌倦和压力可以通过使用正确的认知方法（尤其是自我导向学习）来解决。长时间和规则是一个良好的管理问题。至于系统中的坏人，这是一个非常普遍的现象。所有社会群体都遭受摩擦。然而，当前的教育系统模型存在固有的设计缺陷。只有家庭教育，民主学校教育或非学校教育才能完全解决上述所有问题，包括。社会化问题。
 
 See also: [I wish I had dropped out](https://supermemo.guru/wiki/I_wish_I_had_dropped_out)
 
@@ -91,7 +91,7 @@ School makes me wanna die
 
 > **Figure:** An article at [Free Thought Project](http://thefreethoughtproject.com/google-results-school-makes-search-reveal-disturbing-problem-public-education/) revealed a Google autocomplete propositions for "*school makes me*" (originally posted at [Homeschooling / Unschooling Facebook page](https://www.facebook.com/homeschoolingunschooling/photos/a.221837727864433.46751.181154285266111/1600940536620805/?type=3&theater)). I know that kids hate school, but the list in the search box was still striking. The school makes kids feel, I quote literally: *depressed, suicidal, anxious, stupid, sick, tired, sad, and stressed*. The negative vibe of that list defies belief, so I repeated the search myself and found only minor differences: *wanna die, wanna cry, wanna cut, and wanna give up*. There wasn't a single positive proposition like *school makes me learn with pleasure*, *school makes me smart/educated*, or *school helps me meet nice people*, or so. In case you think that people google only for solutions to problems, you will notice that the same experiment for *jogging* or *exercise* will likely produce suggestions such as *jogging makes me happy* or *exercise raises my endorphins*
 >
-> 图：Free Thought Project上的一篇文章揭示了「学校让我」的谷歌自动完成主张（最初发布在家庭教育/非学校Facebook页面）。我知道孩子们讨厌上学，但搜索框中的名单仍然引人注目。学校让孩子们感受到，我引用字面意思：抑郁，自杀，焦虑，愚蠢，生病，疲倦，悲伤和压力。该列表的负面氛围违背了信念，所以我自己重复搜索，发现只有微小的差异：想要死，想哭，想要切，想要放弃。没有一个积极的主张像学校让我愉快地学习，学校让我聪明/受过教育，或学校帮助我认识好人，等等。如果您认为人们谷歌只是为了解决问题，你会发现慢跑或运动相同的实验可能会产生一些建议，如慢跑让我开心或运动加重我的内啡肽
+> 图：[自由思想项目](http://thefreethoughtproject.com/google-results-school-makes-search-reveal-disturbing-problem-public-education/)上的一篇文章展示了「*学校让我*」的谷歌自动补全提示（最初发布在[家庭教育/非学校教育 Facebook 页面](https://www.facebook.com/homeschoolingunschooling/photos/a.221837727864433.46751.181154285266111/1600940536620805/?type=3&theater)）。我知道孩子们讨厌上学，但搜索框中的名单仍然引人注目。学校让孩子们感受到，我引用字面意思：抑郁，自杀，焦虑，愚蠢，生病，疲倦，悲伤和压力。该列表的负面氛围违背了信念，所以我自己重复搜索，发现只有微小的差异：*想要死，想哭，想要切，想要放弃*。没有一个像学校让我愉快地学习，学校让我聪明/受过教育，或学校帮助我认识好人，等等的积极主张。如果您认为人们谷歌只是为了解决问题，你会发现对*慢跑*或*运动*这些词做相同的实验可能会产生一些建议，如*慢跑让我开心*或*运动提高我的内啡肽*
 
 ## 20.4 Why kids like school?
 
@@ -99,7 +99,7 @@ School makes me wanna die
 
 For balance, let's consider why kids like school. Nearly all teens hate school, but some would say they like school conditionally.
 
-为了平衡，让我们考虑为什么孩子喜欢上学。几乎所有的青少年都讨厌上学，但有些人会说他们有条理地喜欢上学。
+为了平衡，让我们考虑为什么孩子喜欢上学。几乎所有的青少年都讨厌上学，但有些人会说他们有条件地喜欢上学。
 
 For example "*I hate school, but I love to meet my friends there*". Or, "*I hate school, but I love physical education*". Or "*I love German, but I hate English*".
 
@@ -107,11 +107,11 @@ For example "*I hate school, but I love to meet my friends there*". Or, "*I hate
 
 ### 20.4.1 Freddy
 
-### Freddy
+### 弗雷迪
 
 I found just one case of a kid with a genuine liking for school. Freddy is 11 years old. He comes from a very well regulated family. There is no TV at home. Freddy and his siblings all started reading early. There was no distraction from YouTube or [videogames](https://supermemo.guru/wiki/Videogames). There were regular bedtime stories with his mom and dad.
 
-我发现只有一个孩子真正喜欢上学。弗雷迪今年 11 岁。他来自一个受到良好监管的家庭。家里没有电视。弗雷迪和他的兄弟姐妹都早早开始读书。YouTube 或电子游戏没有分散注意力。他妈妈和爸爸经常上床睡觉。
+我发现只有一个孩子真正喜欢上学。弗雷迪今年 11 岁。他来自一个受到良好监管的家庭。家里没有电视。弗雷迪和他的兄弟姐妹都早早开始读书。YouTube 或[电子游戏](https://supermemo.guru/wiki/Videogames)没有分散注意力。他妈妈和爸爸在规律的睡觉时间给他讲故事。
 
 Freddy goes to sleep at 20:00. It is his mom who keeps a rigorous lights out regimen. Freddy wakes up naturally, usually around 6 am. This is pretty unique and this might be his first step towards success. His sisters call him a crammer, but they never see him doing homework. He claims to spend 30 min. per day on homework and brings most of knowledge from school. Sometimes he does his homework already at school during breaks. In his fourth year of English, he does not speak English much, but still stands out among kids of his age in his good comprehension. Freddy is one of the best students at school. He is also a great footballer and an incredible unflagging long-distance runner. In short, his formula for liking school seems to look like this: (1) sleep well, (2) come to school refreshed, (3) soak in knowledge, and (4) keep winning. Everyone likes to win. Unfortunately, in his class of 23 (incl. 13 girls), the leader is only one.
 
@@ -171,12 +171,12 @@ I keep few live emotions associated with schooling. Somehow, all the period of s
 - loss of freedom and excess work are a frequent reason for school hate
 - 失去自由和过度工作是学校讨厌的常见原因
 - lack of motivation and low [learn drive](https://supermemo.guru/wiki/Learn_drive) make school an unpleasant experience for most kids
-- 缺乏动力和低学习驾驶使学校成为大多数孩子不愉快的经历
+- 缺乏动机和低[学习内驱力](https://supermemo.guru/wiki/Learn_drive)使学校成为大多数孩子不愉快的经历
 - [early school start](https://supermemo.guru/wiki/Optimizing_the_timing_of_brainwork) is one of the main reasons teens dislike school
 - 早早开始上学是青少年不喜欢上学的主要原因之一
 - [homeschooling](https://supermemo.guru/wiki/Homeschooling), [unschooling](https://supermemo.guru/wiki/Unschooling) and [democratic schooling](https://supermemo.guru/wiki/Democratic_school) resolve nearly all causes of school hate
-- 家庭教育，非学校教育和民主学校教育解决了几乎所有学校仇恨的原因
+- [家庭教育](https://supermemo.guru/wiki/Homeschooling)，[非学校教育](https://supermemo.guru/wiki/Unschooling)和[民主学校教育](https://supermemo.guru/wiki/Democratic_school)解决了几乎所有学校仇恨的原因
 - most often mentioned reasons for liking school are: friends, physical education, good grades, and very rarely, actual progress in learning
-- 最常提到喜欢上学的原因有：朋友，体育，成绩好，而且学习的实际进展很少
+- 最常提到喜欢上学的原因有：朋友、体育、成绩好，而且很少提到学习的实际进展
 - [catching a cold](https://supermemo.guru/wiki/Daycare_infections) was a joyous moment in my young life: I did not have to go to school!
-- 感冒是我年轻时的欢乐时刻：我没有去上学！
+- [感冒](https://supermemo.guru/wiki/Daycare_infections)是我年轻时的欢乐时刻：我不用去上学！
